# ARP

./: .gitignore  CH341DLL.H  PRODUCT.md  agent.md  ch341.py  combined_test_core.py  combined_test_mvp.py  design-qa.md  excel_export.py  main.py  ocean_direct_adapter.py  package.json  pixel2motion-SKILL.md  power_meter_mvp.py  run_combined_test_sth_eb314.bat  run_pd_daq_sth_eb314.bat  spectrometer_mvp.py  spectrum_math.py  test_combined_test_core.py  test_combined_test_mvp.py  test_excel_export.py  test_ocean_direct_adapter.py  test_spectrum_math.py  上位机控制26_3_23_20KHz_电流控制TEST.py
combined_test/: __init__.py  analysis_views.py  automatic_controller.py  automation.py  core.py  device_interfaces.py  devices.py  excel_export.py  headless_plots.py  models.py  ocean_direct_adapter.py  persistence.py  plot_types.py  plots.py  record_store.py  shipping_report.py  shipping_report_dialog.py  spectrum.py  spectrum_math.py  tdk_power_supply.py  test_archive.py  theme.py  window.py
packaging/: build_offline.ps1  build_tauri_windows.ps1  pyi_rth_safe_streams.py  tauri.windows.conf.json  tauri_bridge_entry.py
pixel2motion_arp_icon/: logo_motion.html  motion.css  motion_spec.md
tauri-ui/: BRIDGE_CONTRACT.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
tauri-ui/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
tauri-ui/src-tauri/capabilities/: default.json
tauri-ui/src-tauri/icons/: icon.icns
tauri-ui/src-tauri/src/: lib.rs  main.rs
tauri_bridge/: __init__.py  __main__.py  legacy_backend.py  protocol.py  service.py
tests/: __init__.py  test_app.py  test_archive.py  test_automatic_controller.py  test_automation.py  test_core.py  (+12 more)
(+28 files in other folders)
